# yardstick

./: .gitattributes  .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
assets/: .gitkeep
data/: README.md  golden_labels.csv
tests/: test_calibrate.py  test_data.py  test_llm_judge.py  test_metrics.py  test_report_and_golden.py  test_smoke.py
yardstick/: __init__.py  calibrate.py  cli.py  data.py  judge.py  llm.py  metrics.py  report.py
