[project]
name = "yardstick"
version = "0.0.1"
description = "Calibrated LLM evaluation: deterministic metrics + LLM-as-judge, calibrated against hand-labeled gold."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
dev = ["pytest>=8", "ruff>=0.6", "black>=24.0"]

[project.scripts]
yardstick = "yardstick.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["yardstick*"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
